# TMSEG

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
debian/: changelog  control  copyright
precompiled-packages/2.2.1/: tmseg_2.2.1-1.dsc  tmseg_2.2.1-1_all.deb  tmseg_2.2.1-1_amd64.build  tmseg_2.2.1-1_amd64.changes
src/: .project  Makefile.am  Makefile.in  build.xml  pom.xml  tmseg.1  tmseg.in
src/examples/: query.fasta  query.pssm  query.raw  query.tmseg  query_refined.raw  query_refined.tmseg
src/models/: hIndexer.model  hPredictor.model  tPredictor.model
src/src/data/: FastaReader.java  Protein.java  Pssm.java  Segment.java
src/src/io/: FReader.java  FWriter.java  ModelHandler.java
src/src/main/: TMSEG.java
src/src/predictors/: HelixIndexer.java  HelixPredictor.java  TopologyPredictor.java
src/src/processing/: Processing.java
src/src/util/: ErrorUtils.java  Globals.java  Mappings.java
