wekadir = $(pkgdatadir)/weka
modelsdir = $(pkgdatadir)/models
examplesdir = $(pkgdatadir)/examples

dist_bin_SCRIPTS = tmseg
dist_pkgdata_SCRIPTS = tmseg.jar
dist_pkgdata_DATA = tmseg.src.tar.gz
dist_weka_DATA = weka/weka.jar
dist_models_DATA = models/hIndexer.model models/hPredictor.model models/tPredictor.model
dist_examples_DATA = examples/query.fasta examples/query.pssm examples/query.tmseg examples/query.raw examples/query_refined.tmseg examples/query_refined.raw
dist_man1_MANS = tmseg.1
